@@ -35,7 +35,7 @@ dependencies {
     implementation group: 'org.ow2.asm', name: 'asm-util', version: asmVersion
     implementation group: 'org.ow2.asm', name: 'asm-tree', version: asmVersion
     implementation group: 'org.ow2.asm', name: 'asm-analysis', version: asmVersion
-    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.4-M4-groovy-4.0'
+    testImplementation group: 'org.spockframework', name: 'spock-core', version: '2.3-groovy-4.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13.2'
 }
 
@@ -43,6 +43,7 @@ test {
     testLogging {
         events 'passed', 'failed', 'skipped'
     }
+    jvmArgs '--enable-native-access=ALL-UNNAMED'
 }
 
 gradle.projectsEvaluated {
